--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="/" class="logo"><span class="logo-part">WEB</span>STUDIO</a>
           <ul class="nav-list list">
             <li class="item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link link-active" href="./index.html">Studio</a>
             </li>
             <li class="item">
               <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -34,6 +34,7 @@
             <li class="item"><a class="nav-link" href="/">Contacts</a></li>
           </ul>
         </nav>
+
         <ul class="contacts list">
           <li class="item">
             <a class="contact-link" href="mailto:info@devstudio.com"
@@ -56,7 +57,20 @@
         <section class="section hero overlay">
           <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="button">Order Service</button>
+            <button data-modal-open type="button" class="button">
+              Order Service
+            </button>
+            <div class="backdrop is-hidden" data-modal>
+              <div class="modal">
+                <button data-modal-close type="button" class="modal-button">
+                  <svg class="modal-icon">
+                    <use
+                      href="./images/icon.svg/sprite.svg#icon-close-black"
+                    ></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
           </div>
         </section>
       </div>
@@ -469,5 +483,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
