--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
               <a class="nav-link" href="./index.html">Studio</a>
             </li>
             <li class="item">
-              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+              <a class="nav-link link-active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="item"><a class="nav-link" href="/">Contacts</a></li>
           </ul>
@@ -74,148 +76,201 @@
 
           <ul class="gallery-list">
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href=""
-                  ><img
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
+                  <img
                     src="./images/imgbankapps.jpg"
                     alt="Bank App"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Banking App Interface Concept</h2>
-                <p class="gallery-text">App</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Banking App Interface Concept</h2>
+                  <p class="gallery-text">App</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href=""
-                  ><img
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
+                  <img
                     src="./images/imgtelefon.jpg"
                     alt="Payment"
                     width="360"
                     height="300"
                   />
-                </a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Cashless Payment</h2>
-                <p class="gallery-text">Marketing</p>
-              </div>
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Cashless Payment</h2>
+                  <p class="gallery-text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href=""
-                  ><img
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
+                  <img
                     src="./images/img1-2.jpg"
                     alt="Laptop"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Meditaion App</h2>
-                <p class="gallery-text">App</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Meditaion App</h2>
+                  <p class="gallery-text">App</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href=""
-                  ><img
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
+                  <img
                     src="./images/img1-3.jpg "
                     alt="Taxi driver"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Taxi Service</h2>
-                <p class="gallery-text">Marketing</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Taxi Service</h2>
+                  <p class="gallery-text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href=""
-                  ><img
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
+                  <img
                     src="./images/img1-4.jpg"
                     alt="Screen telefone"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Screen Illustrations</h2>
-                <p class="gallery-text">Design</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Screen Illustrations</h2>
+                  <p class="gallery-text">Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href="">
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
                   <img
                     src="./images/img1-5.jpg"
                     alt="Girl"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Online Courses</h2>
-                <p class="gallery-text">Marketing</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Online Courses</h2>
+                  <p class="gallery-text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href=""
-                  ><img
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
+                  <img
                     src="./images/img1-6.jpg"
                     alt="Instagram story"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Instagram Stories Concept</h2>
-                <p class="gallery-text">Design</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Instagram Stories Concept</h2>
+                  <p class="gallery-text">Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href="">
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
                   <img
                     src="./images/img1-7.jpg"
                     alt="Food"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h2 class="gallery-heading">Organic Food</h2>
-                <p class="gallery-text">Web Site</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h2 class="gallery-heading">Organic Food</h2>
+                  <p class="gallery-text">Web Site</p>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item list">
-              <div class="card-thumb">
-                <a href="">
+              <a class="gallery-link" href="">
+                <div class="card-thumb">
                   <img
                     src="./images/img1-8.jpg"
                     alt="Coffee"
                     width="360"
                     height="300"
-                /></a>
-              </div>
-              <div class="card-content">
-                <h3 class="gallery-heading">Fresh Coffee</h3>
-                <p class="gallery-text">Web Site</p>
-              </div>
+                  />
+                  <p class="card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="card-content">
+                  <h3 class="gallery-heading">Fresh Coffee</h3>
+                  <p class="gallery-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
