add changes scc styles

--- a/index.html
+++ b/index.html
@@ -53,24 +53,13 @@
     <!-- Main content-->
     <main>
       <!--Hero-->
-      <div>
+      
         <section class="section hero overlay">
           <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button data-modal-open type="button" class="button">
               Order Service
             </button>
-            <div class="backdrop is-hidden" data-modal>
-              <div class="modal">
-                <button data-modal-close type="button" class="modal-button">
-                  <svg class="modal-icon">
-                    <use
-                      href="./images/icon.svg/sprite.svg#icon-close-black"
-                    ></use>
-                  </svg>
-                </button>
-              </div>
-            </div>
           </div>
         </section>
       </div>
@@ -483,6 +472,17 @@
         </div>
       </div>
     </footer>
+    <!--Modal window-->
+    <div class="backdrop is-hidden" data-modal>
+              <div class="modal">
+                <button data-modal-close type="button" class="modal-button">
+                  <svg class="modal-icon">
+                    <use
+                      href="./images/icon.svg/sprite.svg#icon-close-black"
+                    ></use>
+                  </svg>
+                </button>
+              </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
